[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/game/ui/ActionMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/ui/AudioBusOptions.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/game/ui/OptionsMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -20.0

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_left = 40.0
margin_right = -40.0
margin_bottom = 32.0
text = "Options"
align = 1
valign = 1

[node name="ReturnButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -28.0
margin_right = 26.0
margin_bottom = -5.0
text = "Return"

[node name="Panel" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 32.0
margin_right = -2.0
margin_bottom = -42.0

[node name="Controls" type="ScrollContainer" parent="Panel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2
mouse_filter = 1
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/Controls"]
margin_right = 792.0
margin_bottom = 488.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="P1Label" type="Label" parent="Panel/Panel/Controls/VBoxContainer"]
margin_right = 792.0
margin_bottom = 14.0
text = "Player 1"

[node name="ActionMap_P1_K_Left" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 18.0
margin_right = 792.0
margin_bottom = 52.0
action = "p1_move_left"
action_name = "P1 - Move Left"

[node name="ActionMap_P1_K_Right" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 56.0
margin_right = 792.0
margin_bottom = 90.0
action = "p1_move_right"
action_name = "P1 - Move Right"

[node name="ActionMap_P1_K_Up" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 94.0
margin_right = 792.0
margin_bottom = 128.0
action = "p1_move_up"
action_name = "P1 - Move Up"

[node name="ActionMap_P1_K_Down" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 132.0
margin_right = 792.0
margin_bottom = 166.0
action = "p1_move_down"
action_name = "P1 - Move Down"

[node name="ActionMap_P1_K_Jump" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 170.0
margin_right = 792.0
margin_bottom = 204.0
action = "p1_jump"
action_name = "P1 - Jump"

[node name="ActionMap_P1_K_Action" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 208.0
margin_right = 792.0
margin_bottom = 242.0
action = "p1_action"
action_name = "P1 - Action"

[node name="P2Label" type="Label" parent="Panel/Panel/Controls/VBoxContainer"]
margin_top = 246.0
margin_right = 792.0
margin_bottom = 260.0
text = "Player 2"

[node name="ActionMap_P2_K_Left" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 264.0
margin_right = 792.0
margin_bottom = 298.0
action = "p2_move_left"
action_name = "P2 - Move Left"

[node name="ActionMap_P2_K_Right" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 302.0
margin_right = 792.0
margin_bottom = 336.0
action = "p2_move_right"
action_name = "P2 - Move Right"

[node name="ActionMap_P2_K_Up" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 340.0
margin_right = 792.0
margin_bottom = 374.0
action = "p2_move_up"
action_name = "P2 - Move Up"

[node name="ActionMap_P2_K_Down" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 378.0
margin_right = 792.0
margin_bottom = 412.0
action = "p2_move_down"
action_name = "P2 - Move Down"

[node name="ActionMap_P2_K_Jump" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 416.0
margin_right = 792.0
margin_bottom = 450.0
action = "p2_jump"
action_name = "P2 - Jump"

[node name="ActionMap_P2_K_Action" parent="Panel/Panel/Controls/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 454.0
margin_right = 792.0
margin_bottom = 488.0
action = "p2_action"
action_name = "P2 - Action"

[node name="Audio" type="ScrollContainer" parent="Panel/Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -1.0
focus_mode = 2
mouse_filter = 1
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Panel/Audio"]
margin_right = 812.0
margin_bottom = 68.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 1

[node name="AudioBusOptions" parent="Panel/Panel/Audio/VBoxContainer" instance=ExtResource( 2 )]

[node name="AudioBusOptions2" parent="Panel/Panel/Audio/VBoxContainer" instance=ExtResource( 2 )]
bus_name = "Music"

[node name="AudioBusOptions3" parent="Panel/Panel/Audio/VBoxContainer" instance=ExtResource( 2 )]
bus_name = "SFX"

[node name="AudioBusOptions4" parent="Panel/Panel/Audio/VBoxContainer" instance=ExtResource( 2 )]
bus_name = "UI"

[connection signal="pressed" from="Panel/ReturnButton" to="." method="_on_ReturnButton_pressed"]
